# vortex

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  SDK.MD  config.json  railway.toml
.husky/: commit-msg  pre-commit
api/: .dockerignore  .env.example  .gitignore  Dockerfile  commitlint.config.js  eslint.config.mjs  package.json  tsconfig.json
api/src/: index.ts
api/src/config/: env.ts
api/src/constants/: index.ts
api/src/db/: index.ts  mongodb.ts  redis.ts
api/src/db/collections/: accounts.ts  commitments.ts  index.ts  pools.ts
api/src/docs/: openapi.ts
api/src/middleware/: api-key.ts  cors.ts  database.ts  error.ts  index.ts  rate-limit.ts
api/src/repositories/: accounts.ts  commitments.ts  index.ts  pools.ts
api/src/routes/: health.ts  index.ts
api/src/routes/v1/: index.ts
api/src/routes/v1/accounts/: handlers.ts  index.ts  mappers.ts  schema.ts  types.ts
api/src/routes/v1/commitments/: handlers.ts  index.ts  mappers.ts  schema.ts  types.ts
api/src/routes/v1/merkle/: handlers.ts  index.ts  schema.ts  types.ts
api/src/routes/v1/pools/: handlers.ts  index.ts  mappers.ts  schema.ts  types.ts
api/src/routes/v1/relayer/: handlers.ts  index.ts
api/src/routes/v1/transactions/: handlers.ts  index.ts  schema.ts
api/src/services/: accounts.ts  health.ts  index.ts  merkle-tree.ts  merkle.ts  relayer.ts  sui.ts  transactions.ts
api/src/types/: index.ts
api/src/utils/: handler.ts  hex.ts  logger.ts  schemas.ts  validate-commands.ts  validation.ts
artifacts/circuits/: keypair.sym  transaction2.sym
artifacts/circuits/keypair_cpp/: Makefile  keypair.cpp
artifacts/circuits/keypair_js/: keypair.wasm
artifacts/circuits/transaction2_js/: transaction2.wasm
circuit/: Cargo.toml
circuit/src/: lib.rs
circuits/: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  setup-circom-vscode.sh
circuits/circom/: keypair.circom  transaction.circom
circuits/keys/: proof.json
circuits/src/: lib.rs  main.rs  merkle_tree.rs  poseidon.rs  transaction.circom  transaction2.circom  utils.rs
circuits/src/circuit/: mod.rs
circuits/src/wasm/: mod.rs
contracts/: CLAUDE.md  Move.toml
contracts/core/: Move.toml  Published.toml
contracts/core/sources/: constants.move  errors.move  ext_data.move  proof.move  vortex.move
contracts/sources/: account.move  admin.move  constants.move  errors.move  events.move  ext_data.move  merkle_tree.move  proof.move  utils.move  vortex.move
contracts/swap/: Move.toml  Published.toml
contracts/swap/sources/: swap.move
contracts/test-coins/: Move.toml
contracts/test-coins/sources/: sui.move  usdc.move
contracts/utils/secret/: Move.toml  Published.toml
contracts/utils/secret/sources/: secret.move
core/sources/: ext_data.move  merkle_tree.move  proof.move  vortex.move
indexer/: .env.example  .gitignore  Cargo.toml  Dockerfile  cargo.toml
indexer/crates/indexer/: Cargo.toml
indexer/crates/indexer/src/: lib.rs  main.rs  models.rs  store.rs  traits.rs
indexer/crates/indexer/src/handlers/: mod.rs  new_commitment.rs  new_pool.rs  nullifier_spent.rs
indexer/crates/indexer/tests/: handlers_tests.rs  lib_tests.rs
indexer/crates/schema/: Cargo.toml  cargo.toml
indexer/crates/schema/src/: models.rs
keygen/: Cargo.toml
keygen/keys/: verification_key.hex
keygen/src/: main.rs
package/: Move.toml
package/sources/: admin.move  bps.move  config.move  constants.move  errors.move  erros.move  merkle_tree.move  proof.move  utils.move  vortex.move
package/tests/: packages_tests.move
payload/: deposit.json  tree.json
rust-circuit/: Cargo.toml  WASM_README.md  build-wasm.sh
rust-circuit/keys/: verification_key.hex
rust-circuit/src/: constants.rs  lib.rs  merkle_tree.rs  poseidon.rs
rust-circuit/src/circuit/: mod.rs
rust-circuit/src/poseidon/: mod.rs  poseidon_constants.rs
rust-circuit/src/poseidon_opt/: mod.rs  poseidon_constants_opt.rs
rust-circuit/src/wasm/: mod.rs
scripts/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
scripts/src/: new.ts  set-verifying-key.ts  utils.ts
scripts/src/pkg/nodejs/: vortex.d.ts  vortex.js  vortex_bg.wasm  vortex_bg.wasm.d.ts
scripts/src/utils/: constants.ts  keypair.ts
sdk/: package.json  pnpm-lock.yaml  tsconfig.json
sdk/src/: admin.ts  index.ts  utils.ts  vortex.ts  vortex.types.ts
swap/: Move.toml
swap/sources/: swap.move
test-contracts/: Move.toml
test-contracts/sources/: constants.move  errors.move  ext_data.move  merkle_tree.move  vortex.move
test_contracts/: Move.toml
test_contracts/sources/: errors.move  ext_data.move  merkle_tree.move  proof.move  utils.move  vortex.move
usdc-exchange/: Move.toml
usdc-exchange/sources/: usdc_exchange.move
