[package]
name = "vortex"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-crypto-primitives = { version = "0.4", features = ["r1cs", "sponge", "crh"] }
ark-groth16 = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
anyhow = "1.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"