[workspace]
members = ["crates/indexer", "crates/schema"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
bcs = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
futures = "0.3"
hex = "0.4"
mongodb = "3.1"
once_cell = "1.20"
prometheus = "0.13"
regex = "1.11"
scoped-futures = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", rev = "1658ed4b533db9cb208bd29f236fa176c7ef50e0" }
sui-indexer-alt-framework-store-traits = { git = "https://github.com/MystenLabs/sui.git", rev = "1658ed4b533db9cb208bd29f236fa176c7ef50e0" }
sui-indexer-alt-metrics = { git = "https://github.com/MystenLabs/sui.git", rev = "1658ed4b533db9cb208bd29f236fa176c7ef50e0" }
sui-types = { git = "https://github.com/MystenLabs/sui.git", rev = "1658ed4b533db9cb208bd29f236fa176c7ef50e0" }
telemetry-subscribers = { git = "https://github.com/MystenLabs/sui.git", rev = "1658ed4b533db9cb208bd29f236fa176c7ef50e0" }
tokio = { version = "1.40", features = ["full", "signal"] }
tokio-util = "0.7"
tracing = "0.1"
url = "2.5"