[package]
name = "vortex"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
ark-bn254 = "0.5.0"
ark-crypto-primitives = { version = "0.5.0", features = [
    "crh",
    "r1cs",
    "merkle_tree",
] }
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-r1cs-std = "0.5.0"
ark-relations = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
neptune = { version = "13.0.0", default-features = false }
ff = "0.13"
byte-slice-cast = "1.2"
typenum = "1.17"
blstrs = "0.7"
console_error_panic_hook = "0.1.7"
hex = "0.4.3"
rand_chacha = "0.3"
rand_core = "0.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"
num-bigint = "0.4"
num-traits = "0.2"
once_cell = "1.19"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[[bin]]
name = "poseidon"
path = "src/bin/poseidon.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package.wasm-bindgen]
opt-level = 3

