[package]
name = "vortex-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vortex-indexer"
path = "src/main.rs"

[dependencies]
vortex-schema = { path = "../schema" }
anyhow.workspace = true
bcs.workspace = true
clap.workspace = true
dotenvy.workspace = true
hex.workspace = true
mongodb.workspace = true
move-core-types.workspace = true
once_cell.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
sui-types.workspace = true
sui-sdk-types.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
telemetry-subscribers.workspace = true
url.workspace = true
