[package]
name = "vortex-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vortex-indexer"
path = "src/main.rs"

[dependencies]
vortex-schema = { path = "../schema" }
anyhow.workspace = true
async-trait.workspace = true
bcs.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
hex.workspace = true
mongodb.workspace = true
move-core-types.workspace = true
once_cell.workspace = true
prometheus.workspace = true
regex.workspace = true
scoped-futures.workspace = true
serde.workspace = true
sui-indexer-alt-framework.workspace = true
sui-indexer-alt-framework-store-traits.workspace = true
sui-indexer-alt-metrics.workspace = true
sui-types.workspace = true
telemetry-subscribers.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true
